--- a/frontend/src/app/filters/filters.component.scss
+++ b/frontend/src/app/filters/filters.component.scss
@@ -4,7 +4,7 @@
 .example-container {
   position: absolute;
   top: 0px;
-  bottom: 60px;
+  bottom: 0px;
   left: 0;
   right: 0;
 }
@@ -14,6 +14,6 @@
   align-items: center;
   justify-content: center;
   width: 400px;
-  background: rgba(255, 0, 0, 0.5);
+  background: rgb(148, 76, 222);
   border: black;
 }
