fix sidebar and map

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="main">
   <div class="filters">
-      <app-filters></app-filters>
+    <app-filters></app-filters>
   </div>
   <div class="map">
-    <app-map></app-map>
+    <app-earthquake-map></app-earthquake-map>
   </div>
 </div>
 
