--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,8 +1,26 @@
 .main {
-  justify-content: space-between;
+  //justify-content: space-between;
   display: flex;
+  height: 100%;
+  width: 100%;
+  //flex-direction: column;
+  position: relative;
+}
+
+.map {
+  position: relative;
+  z-index: 1;
+  //float: left;
+  width: 100%;
+  //order: 1;
 }
 
 .filters {
-  float: left;
+  position: absolute;
+  z-index: 2;
+  width: 40%;
+  height: 100%;
+  //float: left;
+  //position: absolute;
+  //order: 0;
 }
