--- a/frontend/src/app/filters/filters.component.html
+++ b/frontend/src/app/filters/filters.component.html
@@ -24,7 +24,58 @@
         </mat-expansion-panel-header>
         <p>I'm visible because I am open</p>
       </mat-expansion-panel>
-        <button class="openfilter" mat-button (click)="sidenav.toggle()">
+      <mat-expansion-panel (opened)="panelOpenState = true"
+                           (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            ID:
+          </mat-panel-title>
+          <mat-panel-description>
+            ID of the earthquake
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <p>Provide ID of the earthquake you want to look for!</p>
+      </mat-expansion-panel>
+
+      <mat-expansion-panel (opened)="panelOpenState = true"
+                           (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Area
+          </mat-panel-title>
+          <mat-panel-description>
+            Filter by rectangle using: <br>
+            x_min, x_max, y_min, y_max
+
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div class="coordinates">
+          <mat-form-field id="ymax">
+            <mat-label>Y_max</mat-label>
+            <input matInput>
+          </mat-form-field>
+          <div class="latitude">
+            <mat-form-field id="xmin">
+              <mat-label>X_min</mat-label>
+              <input matInput>
+            </mat-form-field>
+            <div class="map-picker" (click)="openDialog()">
+              <img src="assets/world-map-transparent.png" id="world-map">
+            </div>
+            <mat-form-field id="xmax">
+              <mat-label>X_max</mat-label>
+              <input matInput>
+            </mat-form-field>
+          </div>
+          <mat-form-field id="ymin">
+            <mat-label>Y_min</mat-label>
+            <input matInput>
+          </mat-form-field>
+        </div>
+      </mat-expansion-panel>
+
+
+      <button class="openfilter" mat-button (click)="sidenav.toggle()">
         <mat-icon *ngIf="sidenav.opened">keyboard_arrow_left</mat-icon>
         <mat-icon *ngIf="!sidenav.opened">keyboard_arrow_right</mat-icon>
       </button>
