--- a/frontend/src/app/filters/filters.component.scss
+++ b/frontend/src/app/filters/filters.component.scss
@@ -1,13 +1,18 @@
+.open-filter {
+  float: right;
+  width: 40px;
+}
 .mat-mdc-form-field + .mat-mdc-form-field {
   margin-left: 8px;
 }
 
 .example-container {
   position: absolute;
-  top: 0px;
-  bottom: 0px;
+  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
+  float: left;
 }
 
 .example-sidenav {
