--- a/frontend/src/app/filters/filters.component.html
+++ b/frontend/src/app/filters/filters.component.html
@@ -2,31 +2,17 @@
   <mat-sidenav-container class="example-container" hasBackdrop="false" [ngStyle]="{width: !sidenav.opened ? '0px' : '40vh'}">
 <!--    TODO set ngStyle to work only after 0.5sec - after animation is done (right now there is no animation -->
 <!--    TODO set button on the leftside of sidebar - problably on the div before sidenav so it wont cause problems wish sidenav's width -->
+
     <mat-sidenav #sidenav mode="over" opened class="example-sidenav">
+      <mat-toolbar>
+        <span>Filters</span>
+        <span class="example-spacer"></span>
+        <button class="close" mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon *ngIf="sidenav.opened">keyboard_arrow_left</mat-icon>
+          <mat-icon *ngIf="!sidenav.opened">keyboard_arrow_right</mat-icon>
+        </button>
+      </mat-toolbar>
       <mat-accordion>
-        <mat-expansion-panel hideToggle>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              This is the expansion title
-            </mat-panel-title>
-            <mat-panel-description>
-              This is a summary of the content
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <p>This is the primary content of the panel.</p>
-        </mat-expansion-panel>
-        <mat-expansion-panel (opened)="panelOpenState = true"
-                             (closed)="panelOpenState = false">
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Self aware panel
-            </mat-panel-title>
-            <mat-panel-description>
-              Currently I am {{panelOpenState ? 'open' : 'closed'}}
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-          <p>I'm visible because I am open</p>
-        </mat-expansion-panel>
         <mat-expansion-panel (opened)="panelOpenState = true"
                              (closed)="panelOpenState = false">
           <mat-expansion-panel-header>
@@ -40,8 +26,7 @@
           <p>Provide ID of the earthquake you want to look for!</p>
         </mat-expansion-panel>
 
-        <mat-expansion-panel (opened)="panelOpenState = true"
-                             (closed)="panelOpenState = false">
+        <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
               Area
@@ -86,7 +71,7 @@
               Seismic level of earthquake
             </mat-panel-description>
           </mat-expansion-panel-header>
-          <mat-slider min="200" max="500">
+          <mat-slider min="200" max="500" [displayWith]="formatLabel">
             <input value="300" matSliderStartThumb>
             <input value="400" matSliderEndThumb>
           </mat-slider>
@@ -110,9 +95,8 @@
     </mat-sidenav>
 
   </mat-sidenav-container>
-
+  <button mat-icon-button (click)="sidenav.toggle()">
+    <mat-icon *ngIf="sidenav.opened" style="color: black">keyboard_arrow_left</mat-icon>
+    <mat-icon *ngIf="!sidenav.opened" style="color: black">keyboard_arrow_right</mat-icon>
+  </button>
 </div>
-<button class="open-filter" mat-button (click)="sidenav.toggle()">
-  <mat-icon *ngIf="sidenav.opened">keyboard_arrow_left</mat-icon>
-  <mat-icon *ngIf="!sidenav.opened">keyboard_arrow_right</mat-icon>
-</button>
