--- a/frontend/src/app/filters/coordinate-picker-dialog/coordinate-picker-dialog.component.html
+++ b/frontend/src/app/filters/coordinate-picker-dialog/coordinate-picker-dialog.component.html
@@ -8,7 +8,7 @@
   </mat-card-content>
   <mat-card-actions align="end">
     <button mat-button matDialogClose>CANCEL</button>
-    <button mat-button>DRAW AGAIN</button>
+    <button mat-button (click)="drawRectangle()">DRAW AGAIN</button>
     <button mat-button>APPLY</button>
   </mat-card-actions>
 </mat-card>
