leftofer from old development

--- a/frontend/src/app/filters/coordinate-picker-dialog/coordinate-picker-dialog.component.html
+++ b/frontend/src/app/filters/coordinate-picker-dialog/coordinate-picker-dialog.component.html
@@ -9,6 +9,6 @@
   <mat-card-actions align="end">
     <button mat-button matDialogClose>CANCEL</button>
     <button mat-button (click)="drawRectangle()">DRAW AGAIN</button>
-    <button mat-button>APPLY</button>
+    <button mat-button (click)="close()">APPLY</button>
   </mat-card-actions>
 </mat-card>
